--- a/bachelorapp/client/angular.json
+++ b/bachelorapp/client/angular.json
@@ -37,6 +37,11 @@
           },
           "configurations": {
             "production": {
+              "optimization": {
+                "scripts": true,
+                 "styles": true,
+                 "fonts": false
+             },
               "budgets": [
                 {
                   "type": "initial",
@@ -59,7 +64,7 @@
             },
             "development": {
               "buildOptimizer": false,
-              "optimization": false,
+              "optimization": true,
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
